css/style.css
:root {
    --accent: #c7427e;
    --bg: #2b2b2b;
    --bg2: #202020;
    --border: #5c2d2a;
    --border2: #373737;
    --fg: #ededed;
    --fg2: #d2b48c;
    --hov: #ffffff05;
    --shadow1: 0 4px 12px rgba(0, 0, 0, 0.25);
}


body {
    font-family: sans-serif;
    background: var(--bg);
    color: var(--fg);
    display: flex;
    height: 100vh;
    margin: 0;
}

/* Text */
h2 {
    margin-top: 0;
    margin-bottom: 0;
    color: var(--fg);
    font-family: 'Linux Libertine', 'Georgia', 'Times', serif;
    font-size: 28px;
    font-weight: 500;
}

label {
    display: block;
    margin-bottom: 5px;
    font-weight: 500;
    font-size: 12px;
    text-transform: uppercase;
}

/* Sidebar */
#sidebar {
    max-width: 333px;
    width: 33vw;
    background: var(--bg2);
    padding: 20px;
    border-right: 1px solid var(--border2);
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    box-sizing: border-box;
}

#sidebarSearch,
select {
    width: 100%;
    padding: 10px;
    margin-bottom: 20px;
    background: var(--bg);
    color: var(--fg);
    border: 1px solid var(--border2);
    box-sizing: border-box;
}

#sidebarSearch:hover,
#sidebarSearch:active,
#sidebarSearch:focus,
select:hover,
select:active,
select:focus {
    border: 1px solid var(--border2);
    outline: none;
}

#sidebarSearchResults:not(:empty) {
    margin-top: -21px;
    margin-bottom: 10px;
    border-top: none;
    color: var(--fg);
    background-color: var(--bg);
    border: 1px solid var(--border2);
}

#sidebarSearchResults div small {
    cursor: pointer;
    color: var(--fg2);
}

#sidebarSearchResults div:last-child {
    border-bottom: none !important;
}

#sidebarSearchResults div:hover {
    background-color: var(--hov);
}

.sidebar-button {
    width: 100%;
    padding: 10px;
    margin-top: 10px;
    color: var(--fg);
    background-color: var(--bg);
    border: 1px solid var(--border2);
    cursor: pointer;
    font-weight: bold;
}

/* Content Area */
#content {
    flex-grow: 1;
    padding: 20px;
    overflow-y: auto;
    max-width: 1080px;
    margin: 0 auto;
}

#header-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
    margin-bottom: 20px;
}

/* Chart */
.chart-container {
    flex-grow: 1;
    background-color: var(--bg2);
    border: 1px solid var(--border);
    padding: 10px;
}

.chart-container label {
    display: block;
    margin-top: 10px;
    color: var(--fg);
    font-family: monospace;
    text-transform: uppercase;
    letter-spacing: 1px;
    text-align: center;
}

/* Chart Tabs */
.chart-tab-button {
    background: none;
    border: none;
    cursor: pointer;
    color: var(--fg2);
    border-left: 1px solid var(--border);
    border-image: linear-gradient(to top, var(--border), transparent) 1;
    vertical-align: bottom;
    margin-bottom: -1px;
    padding: 10px;
    padding-top: 15px;
    width: 90px;
}

.chart-tab-button.active {
    color: var(--fg);
    background-image: linear-gradient(to top, var(--bg2), transparent);
    border-left: 1px solid var(--border);
}

.chart-tab-button:last-child {
    border-right: 1px solid var(--border);
    border-image: linear-gradient(to top, var(--border), transparent) 1;
}

.chart-tab-button:hover {
    text-decoration: underline;
}

.chart-tab-dropdown {
    position: relative;
    display: inline-block;
}

.chart-tab-dropdown:hover .chart-tab-dropdown-content {
    display: flex;
    flex-direction: column;
}

.chart-tab-dropdown:last-child {
    border-right: 1px solid var(--border);
    border-image: linear-gradient(to top, var(--border), transparent) 1;
}

.chart-tab-dropdown:hover > .chart-tab-button {
    background-image: none;
    border-left: 1px solid var(--border);
}

.chart-tab-dropdown-content {
    display: none;
    position: absolute;
    background-color: var(--bg);
    z-index: 1000;
    border: 1px solid var(--border);
    border-top: none;
    box-shadow: var(--shadow1);
}

.chart-tab-dropdown-content button {
    width: 89px;
    padding: 10px;
    text-align: left;
    background: none;
    color: var(--fg2);
    border: none;
    cursor: pointer;
    border-top: 1px solid var(--border2);
    text-align: center;
}

.chart-tab-dropdown-content button:hover {
    background-color: var(--hov);
}

.chart-tab-dropdown-content button.active {
    color: var(--fg);
}

/* Rates Grid */
.rates-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
    margin-top: 20px;
    border: 1px solid var(--border);
    background-color: var(--bg2);
    overflow: hidden;
}

.rate-item {
    display: flex;
    flex-direction: column;
    padding: 10px;
    border-right: 1px solid var(--bg);
    border-bottom: 1px solid var(--bg);
    margin-right: -1px;
    margin-bottom: -1px;
}

.rate-item.highlight,
.rate-item:hover {
    background-color: var(--hov);
}

.rate-label {
    color: var(--fg2);
    text-transform: uppercase;
}

.rate-value {
    color: var(--fg2);
    font-family: monospace;
    font-size: 14px;
}

.grid-input {
    background: transparent;
    border: none;
    border-bottom: 1px solid var(--fg2);
    color: var(--fg2);
    width: 60px;
    text-align: center;
    font-size: inherit;
    font-family: inherit;
    outline: none;
}

.grid-input::-webkit-outer-spin-button,
.grid-input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Data */
#dataSmall {
    margin-top: 20px;
    display: block;
    color: var(--fg) !important;
}

/* Desktop Menu */
#headerButton {
    display: none;
}

/* Mobile */
@media (max-width: 768px) {

    /* Mobile Header */
    #header-container {
        position: -webkit-sticky;
        position: sticky;
        top: 0;
        z-index: 100;
        background: var(--bg2);
        border-bottom: 1px solid var(--border2);
        padding: 10px 20px;
        padding-top: calc(env(safe-area-inset-top) + 10px);
        margin: 0px -20px 20px -20px;
        align-items: center;
        gap: 15px;
        z-index: 1001;
    }

    #headerButton {
        display: block !important;
        position: static !important;
        background: transparent;
        color: white;
        border: none;
        cursor: pointer;
        font-size: 24px;
    }

    #headerH2 {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        margin-top: 0px;
        margin-bottom: 0px;
        font-size: 24px;
    }

    /* Mobile Sidebar */
    #sidebar {
        width: 66vw;
        left: -66vw;
        position: fixed;
        z-index: 999;
        height: 100vh;
        padding-top: 80px;
        z-index: 1000;
        max-width: 100vw;
    }

    #sidebar.open {
        left: 0;
    }

    #sidebarOverlay {
        display: none;
        position: fixed;
        z-index: 998;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        background: rgba(0, 0, 0, 0.5);
    }

    #sidebarOverlay.show {
        display: block;
    }

    #content {
        padding-top: 0;
    }


    /* Mobile Input */
    #sidebarSearch,
    select {
        font-size: 16px !important;
    }
}

/* Deprecated */
#statSelect {
    display: none;
}

